Attempt to fix inconsistent menu expansions on mobile

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -33,4 +33,5 @@ code{
 
 .navbar-custom {
   transition: top 0.5s ease;
+  min-height: auto;
 }
